use valueOf instead of new for primitive types
git-svn-id: svn://svn.code.sf.net/p/x10/code/trunk@27480 a326200e-df2c-42e0-81fa-597e909af41d