@@ -20,6 +20,6 @@ import polyglot.util.Position;
 public class DoubleLiteral extends NumericLiteral {
   public DoubleLiteral(Position position, double d, int sym) {
       super(position, sym);
-      this.val = new Double(d);
+      this.val = Double.valueOf(d);
   }
 }
