@@ -20,6 +20,6 @@ import polyglot.util.Position;
 public class FloatLiteral extends NumericLiteral {
   public FloatLiteral(Position position, float f, int sym) {
       super(position, sym);
-      this.val = new Float(f);
+      this.val = Float.valueOf(f);
   }
 }
